--- a/style/style.css
+++ b/style/style.css
@@ -200,6 +200,15 @@ body {
         .borrowed { background: #f8d7da; color: #721c24; }
         .active-borrower { background: #d1ecf1; color: #0c5460; }
 
+        #myInput {
+            width: 100%;
+            padding: 1rem;
+            border: 1px solid;
+            border-radius: 5px;
+            margin-bottom: 1.5rem;
+            font-size: 1rem;
+        }
+
 /* Event Styles */
         .section {
             padding: 80px 0;
